--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ http://www.tooplate.com/view/2109-the-card
         <!-- Site header -->
         <header class="tm-site-header-box tm-bg-dark">
           <h1 class="tm-site-title">The Card</h1>
-          <p class="mb-0 tm-site-subtitle">Free HTML Template for you</p>
+         <!-- <p class="mb-0 tm-site-subtitle">Free HTML Template for you</p> -->
         </header>
       </div>
       <!-- tm-top-container -->
