week 5 -- add a form to website

--- a/index.html
+++ b/index.html
@@ -249,7 +249,8 @@ http://www.tooplate.com/view/2109-the-card
 
               <!-- Section 3 Contact -->
               <section class="tm-section tm-section-3 tm-section-left">
-                <form action="" class="tm-contact-form" method="post">
+               <form action="https://formspree.io/f/mpzbdwbo"
+               method="POST">
                   <div class="form-group mb-4">
                     <input
                       type="text"
@@ -284,8 +285,11 @@ http://www.tooplate.com/view/2109-the-card
                     <button type="submit" class="btn tm-send-btn tm-fl-right">
                       Send
                     </button>
+                    
                   </div>
-                </form>
+                </form> 
+                <!-- modify this form HTML and place wherever you want your form -->
+
               </section>
             </div>
           </div>
