updated about & added bits of experience

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Gigi Padalec</h1>
-      <p>I'm a <span class="typed" data-typed-items="Student, Problem Solver, Coder "></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Student, Problem Solver, Coder, Lifelong Learner, Critical Thinker "></span></p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -79,9 +79,9 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am a senior at Michigan State University and I'm studying computer science. After graduation, I will be working
-            at Microsoft as a technical PM. Besides coding, one of my favorite things to partake in is outreach. I work in numerous programs in the Lansing area while also working directly in the Lansing school district :).
-             When I have time for myself, I enjoy crafting, playing tennis, hiking, and playing Animal Crossing.</p>
+          <p>Hi! My name is Gigi :) I am a senior studying computer science at Michigan State University. After graduation, I will be working
+            at Microsoft as a technical PM & I plan to go to grad school Fall 2023 to get my masters in Computer Science! Besides coding, one of my favorite things to partake in is outreach. I work in numerous programs in the Lansing area while also working directly in the Lansing school district.
+             When I have time for myself, I enjoy crafting, playing tennis,traveling, hiking, and playing Animal Crossing.</p>
         </div>
 
         <div class="row">
@@ -213,9 +213,9 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
+              <h4>Bachelor Of Science &amp; Computer Science</h4>
+              <h5>2018 - expected: May 2020</h5>
+              <p><em>Michigan State University, East Lansing, MI</em></p>
               <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
             </div>
             <div class="resume-item">
@@ -228,14 +228,14 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
+              <h4>Software Engineer Intern at Target</h4>
+              <h5>June 2021 - August 2021</h5>
+              <p><em>Minneapolis, MN  </em></p>
               <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+                <li>Worked in an Agile environment with daily stand-up meetings and collaborated with the entire team.</li>
+                <li>Created an API to help specify store needs. Written in Kotlin, tested in Groovy.  </li>
+                <li>Created a plugin that promoted to production from terminal and increased productivity by 30% for developers. (Kotlin, Groovy)</li>
+                <li>Developed new UI features to Target’s internal website to toggle between developer and standard views across page (Javascript, React)</li>
               </ul>
             </div>
             <div class="resume-item">
