--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Hi! My name is Gigi :) I am a senior studying computer science at Michigan State University. After graduation, I will be working
+          <!-- <p>Hi! My name is Gigi :) I am a senior studying computer science at Michigan State University. After graduation, I will be working
             at Microsoft as a technical PM & I plan to go to grad school Fall 2023 to get my masters in Computer Science! Besides coding, one of my favorite things to partake in is outreach. I work in numerous programs in the Lansing area while also working directly in the Lansing school district.
-             When I have time for myself, I enjoy crafting, playing tennis,traveling, hiking, and playing Animal Crossing.</p>
+             When I have time for myself, I enjoy crafting, playing tennis,traveling, hiking, and playing Animal Crossing.</p> -->
         </div>
 
         <div class="row">
@@ -89,12 +89,14 @@
             <img src="assets/img/IMG_5808.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>UI/UX Designer &amp; Web Developer.</h3>
-            <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+            <h3>Incoming PM @ Microsoft</h3>
+            <!-- <p class="fst-italic"> -->
+              <p>
+              Hi! My name is Gigi :) I am a senior studying computer science at Michigan State University. After graduation, I will be working
+            at Microsoft as a technical PM. I am also planning on going to grad school Fall 2023 to get my masters in Computer Science! Besides coding, one of my favorite things to partake in is outreach. I work in numerous programs in the Lansing area while also working directly in the Lansing school district.
+             When I have time for myself, I enjoy crafting, playing tennis,traveling, hiking, and playing Animal Crossing.
             </p>
-            <div class="row">
+            <!-- <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
@@ -111,11 +113,11 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
-            </div>
-            <p>
+            </div> -->
+            <!-- <p>
               Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
               Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
-            </p>
+            </p> -->
           </div>
         </div>
 
