header color change

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Gigi Padalec</h1>
-      <p>I'm a <span class="typed" data-typed-items="Student, Problem Solver, Coder, Lifelong Learner, Critical Thinker "></span></p>
+      <h1 style="color: #9E606F">Gigi Padalec</h1>
+      <p>I'm a <span style="color: #9E606F" class="typed" data-typed-items="Student, Problem Solver, Coder, Lifelong Learner, Critical Thinker "></span></p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -230,7 +230,7 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Software Engineer Intern at Target</h4>
+              <h4>Backend Software Engineer Intern at Target</h4>
               <h5>June 2021 - August 2021</h5>
               <p><em>Minneapolis, MN  </em></p>
               <ul>
