background color changes, about fixes

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 
 <body>
-
+  
   <!-- ======= Mobile nav toggle button ======= -->
   <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
   <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
@@ -94,7 +94,7 @@
               <p>
               Hi! My name is Gigi :) I am a senior studying computer science at Michigan State University. After graduation, I will be working
             at Microsoft as a technical PM. I am also planning on going to grad school Fall 2023 to get my masters in Computer Science! Besides coding, one of my favorite things to partake in is outreach. I work in numerous programs in the Lansing area while also working directly in the Lansing school district.
-             When I have time for myself, I enjoy crafting, playing tennis,traveling, hiking, and playing Animal Crossing.
+             When I have time for myself, I enjoy crafting, playing tennis, traveling, hiking, and tending to my garden Animal Crossing.
             </p>
             <!-- <div class="row">
               <div class="col-lg-6">
