--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
             <!-- <p class="fst-italic"> -->
               <p>
               Hi! My name is Gigi :) I am a senior studying computer science at Michigan State University. After graduation, I will be working
-            at Microsoft as a technical PM. I am also planning on going to grad school Fall 2023 to get my masters in Computer Science! Besides coding, one of my favorite things to partake in is outreach. I work in numerous programs in the Lansing area while also working directly in the Lansing school district.
-             When I have time for myself, I enjoy crafting, playing tennis, traveling, hiking, and tending to my garden Animal Crossing.
+            at Microsoft as a technical PM. I am also planning on going to grad school Fall 2023 to work towards a masters in Computer Science! Besides coding, one of my favorite things to partake in is outreach. I work in numerous programs in the Lansing area while also working directly in the Lansing School District.
+             When I have time for myself, I enjoy crafting, playing tennis, traveling, hiking, and tending to my Animal Crossing garden.
             </p>
             <!-- <div class="row">
               <div class="col-lg-6">
