--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1 style="color: #9E606F">Gigi Padalec</h1>
-      <p>I'm a <span style="color: #9E606F" class="typed" data-typed-items="Student, Problem Solver, Coder, Lifelong Learner, Critical Thinker "></span></p>
+      <h1 style="color: #6C4060">Gigi Padalec</h1>
+      <p>I'm a <span style="color: #6C4060" class="typed" data-typed-items="Student, Problem Solver, Coder, Lifelong Learner, Critical Thinker "></span></p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
