color change, footer

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
-      <h1 style="color: #6C4060">Gigi Padalec</h1>
-      <p>I'm a <span style="color: #6C4060" class="typed" data-typed-items="Student, Problem Solver, Coder, Lifelong Learner, Critical Thinker "></span></p>
+      <h1 style="color: #9F6E72">Gigi Padalec</h1>
+      <p>I'm a <span style="color: #9F6E72" class="typed" data-typed-items="Student, Problem Solver, Coder, Lifelong Learner, Critical Thinker "></span></p>
       <div class="social-links">
         <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
         <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -90,7 +90,7 @@
             <img src="assets/img/IMG_5808.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
-            <h3>Incoming PM @ Microsoft</h3>
+            <h3 style = "color: #9F6E72">Incoming PM @ Microsoft</h3>
             <!-- <p class="fst-italic"> -->
               <p>
               Hi! My name is Gigi :) I am a senior studying computer science at Michigan State University. After graduation, I will be working
@@ -134,12 +134,12 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Here are some of my past professional experiences!</p>
         </div>
 
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="resume-title">Sumary</h3>
+            <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Gigi Padalec</h4>
               <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
