--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <h4 style = "color: #9F6E72">Lifelong Learning!</h4>
             <p>Learning is something that never stops. It's important to me that I am in an 
               environment that continues to challenge me and allows me to grow and flourish into my best self. Because of this, 
-              I'm always learning new skills - technical or non-technical (trying to become a better cook :) ). My passion for tech
+              I'm always learning new skills, technical or non-technical (trying to become a better cook :) ). My passion for tech
               allows me to be in a space with continued growth and endless possibilities.
 
             </p>
