programming langugae addition

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                 <br>
                 <br>
               <h4>Computer Skills</h4>
-              <p>Computer Skills: C++17, Python, C,, Kotlin, Swift, HTML, CSS, PHP, Bootstrap, Markdown</p>
+              <p>C++17, Python, C,, Kotlin, Swift, HTML, CSS, PHP, SQL, Bootstrap, Markdown</p>
               <br>
               <br>
               <h4>Clubs Participated In</h4>
