--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                 <br>
                 <br>
               <h4>Computer Skills</h4>
-              <p>C++17, Python, C,, Kotlin, Swift, HTML, CSS, PHP, SQL, Bootstrap, Markdown</p>
+              <p>C++17, Python, C, Kotlin, Swift, HTML, CSS, PHP, SQL, Bootstrap, Markdown</p>
               <br>
               <br>
               <h4>Clubs Participated In</h4>
@@ -267,7 +267,7 @@
                   <p>Society of Women Engineers - Member</p> 
                   <p> Women in Computing – Webmaster </p> 
                   <p>Phi Sigma Rho-Engineering and Engineering Technology Sorority – Member</p>  
-                  <p>Association for Computing Machinery (ACM)- Member</p>  
+                  <p>Association for Computing Machinery (ACM) - Member</p>  
               </ul>
               </p>
             </div>
