--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             <div class="resume-item pb-0">
               <h4>Gigi Padalec</h4>
               <p>Grace Hopper Scholarship Recipient 2020 & 2021</p>
-              <p>MSU Engineering Undergraduate Service Award Recipient 2021</p>
+              <p>MSU Engineering Undergraduate Service Award Recipient 2021 & 2022</p>
             <!-- <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
               <ul>
                 <li>Michigan</li>
