word changes, new profile photo

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <h4 style = "color: #9F6E72">Interests!</h4>
             <p>My interests surround software development. I have experience with both front and backend development in a professional environment and
               want to continue to develop those skills. 
-              I'm also interested in the intersection of clients and software developers, specifically communicating amongst
+              I'm also interested in the cross over between clients and software developers, specifically working among
               both in order to build a useful and accessible piece of technology for users.
             </p>
             <h4 style = "color: #9F6E72">Lifelong Learning!</h4>
@@ -717,7 +717,7 @@
        <div class="row">
        
           <div class="col-lg-4">
-            <img src="assets/img/college_pic.jpg" class="img-fluid" alt="girl sitting on brick stair step">
+            <img src="assets/img/Gigi.jpg" class="img-fluid" alt="girl sitting on brick stair step">
           </div>
      
                 <div class="col-md-6 form-group">
