--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
        
            
             <h4 style = "color: #9F6E72">Interests!</h4>
-            <p>My interests surround in making technology accessible and inclusive.  I have experience with both front and backend development in a professional environment and
+            <p>My interests are making technology accessible and inclusive.  I have experience with both front and backend development in a professional environment and
               want to continue to develop these skills. 
               I'm also interested in the cross over between consumers and product, specifically working among
               both in order to build a useful and accessible piece of technology for users.
