--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <h3 style = "color: #9F6E72">PM @ Microsoft</h3>
             <!-- <p class="fst-italic"> -->
               <p>
-              Hi! My name is Gigi :) I am a recent graduate Michigan State University from Michigan State University with a degree in computer science and a focus in Biometrics. I currently
+              Hi! My name is Gigi :) I am a recent graduate Michigan State University with a degree in computer science and a focus in Biometrics. I currently
               work at Microsoft as a product manager. 
               <p></p>
              When I have time for myself, I enjoy puzzles (sudoku advocate), crafting, playing tennis, traveling, hiking, and tending to my Animal Crossing garden. I am also an aspiring author and am currently in the works of writing my first book!
