updated bio and profile

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <div class="row">
           <div class="col-lg-4">
-            <img src="assets/img/gigi2023.jpg" class="img-fluid" alt="picture of a girl smiling in a pink and black top">
+            <img src="assets/img/updatedProfileGigi.jpg" class="img-fluid" alt="picture of a girl smiling in a pink and black top">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content">
             <h3 style = "color: #9F6E72">PM @ Microsoft</h3>
@@ -101,10 +101,9 @@
        
            
             <h4 style = "color: #9F6E72">Interests!</h4>
-            <p>My interests are making technology accessible and inclusive.  I have experience with both front and backend development in a professional environment and
-              want to continue to develop these skills. 
-              I'm also interested in the cross over between consumers and product, specifically working among
-              both in order to build a useful and accessible piece of technology for users.
+            <p>My interests surround making technology accessible and inclusive. I have experience with both 
+              front and backend development in a professional environment and want to continue to develop these 
+              skills. I'm passionate about building useful and accessible pieces of technology for users.
             </p>
             <h4 style = "color: #9F6E72">Lifelong Learning!</h4>
             <p>Learning is something that never stops. It's important to me that I am in an 
